Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/LambdaConv10.out
LambdaConv10.java:15:39: compiler.err.prob.found.req: (compiler.misc.incompatible.arg.types.in.lambda)
1 error
